2004-01-07 Craig Franklin <craigfranklin@comcast.net>
  * Use environmental variables GPUTILS_HEADER_PATH and GPUTILS_LKR_PATH
    for the default header and lkr paths.
  * Removed CFLAGS from mingw port.

2004-01-01 Scott Dattalo <scott@dattalo.com>
  * libgputils/gpsystem.c - added unsigned short gp_getu16(char *addr)
  * gputils/dump.c - changed references of gp_getl16 to gp_getu16. Added
    new function fget_line() to read a line from a file.

2004-01-01 Craig Franklin <craigfranklin@comcast.net>
  * Allow multiple config words for all devices in gpasm.

2003-12-25 Craig Franklin <craigfranklin@comcast.net>
  * Use full symbol name in gpal at the base of symbol tables.
  * Add symbol alias at the top of symbol table stack.
  * Use full type name in types.

2003-12-23 Craig Franklin <craigfranklin@comcast.net>
  * Removed constant and variable keywords from gpal.  Added constant type.
  * Removed header file scan from gpal.

2003-12-20 Craig Franklin <craigfranklin@comcast.net>
  * Fixed i_memory allocation so memory beyond 32k words is initialized to 0.
  * Fixed memory map in gpasm list files for 18xx devices.  The map is now 
    in byte format.

2003-12-18 Craig Franklin <craigfranklin@comcast.net>
  * Changed gpasm classification to beta, gpal to pre-alpha, and all
    others to alpha.
  * Updated gputils manual to include gpal.
  * Added gpal man page.
  * Fixed many gpal bugs.

2003-12-15 Craig Franklin <craigfranklin@comcast.net>
  * Added a new tool called gpal.
  * Added debug-info feature to gpasm, so HLL linenumbers can be inserted
    into COFF outputs.

2003-12-14 Craig Franklin <craigfranklin@comcast.net>
  * Fixed a bug in gpasm 18xx absolute data memory sections that caused the 
    address to be wrong.
  
2003-12-01 Craig Franklin <craigfranklin@comcast.net>
  * Changed gpasm behavior so cblocks are only processed when assembly is
    enabled. 

2003-11-30 Craig Franklin <craigfranklin@comcast.net>